  EntitySelectCondition.setFetchCount() added
  DefaultProperty.BooleanValueConverter, no longer depends on Database.getBooleanTrueValue() and getBooleanFalseValue()
  Database.getBooleanTrueValue() and getBooleanFalseValue() removed
  Properties.booleanProperty() calls must now specify trueValue and falseValue as parameters
  EntityApplicationPanel no longer sets the Look&Feel during startup if it's already set to the default one
  Entities.equal() added
  UniqueConstraintException added, used in DefaultLocalEntityConnection, some minor related fixes and refactorings
  DefaultLocalEntityConnection.insert() and update() now throw ReferentialIntegrityException when applicable (only H2Database and Oracle for now)
  EntityTableModel.isQueryConfigurationAllowed property removed, EntityTablePanel.includeConditionPanel used instead
  EntityTableConditionPanel, require_query_condition i18n caption changed
  UiUtil, file chooser now clears the previously selected files properly when selecting files to open or save
  DefaultProperty.validateType() improved error message now includes entityId
  EntityTableModel.set/getRefreshOnForeignKeyConditionValuesSet() added
  SwingEntityTableModel and FXEntityListModel implement the above
  EntityTablePanel, EntityTableView, popup menu controls setup refactored
  TristateCheckBox, FilteredTablePanel, IntegerFieldTest, deprecation warnings fixed
  ResultPacker bug fixed, redundant call to fetch() removed
  Gradle wrapper added
  Database, DatabaseConnections, DefaultDatabaseConnection, LocalEntityConnections, DefaultLocalEntityConnection now document where AuthenticationException is thrown
  TestUtil.getDelimitedString() simplified using String.join()
  ValueObserver added, for read only access to Values, Value.get() and Value.getObserver() moved to ValueObserver, Value implements it, Values.DefaultValueObserver values it
  ValueObserver.getObserver() renamed to getChangeObserver()
  Misc. javadoc fixes and some minor changes